fix: clean api , remove controller , client and type
